objects/LLC_BI__Entity_Compliance__c.object
<CustomObject>
    <description>The Entity Compliance object holds data necessary for compliance reporting on a Legal Entity.</description>
    <fields>
        <fullName>LLC_BI__Age__c</fullName>
        <description>This is a required field.  This field indicates the age of the borrower or co-borrower.</description>
        <label>Age of the Borrower or Co-Borrower</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Entity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Entity</label>
        <referenceTo>LLC_BI__Legal_Entities__c</referenceTo>
        <relationshipLabel>Entity Compliances</relationshipLabel>
        <relationshipName>Entity_Compliances</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Applicant_Type__c</fullName>
        <description>This is a required field. This field indicates if the entity is the Applicant or Co-Applicant.</description>
        <label>HMDA Applicant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Applicant</fullName>
                </value>
                <value>
                    <fullName>Co-Applicant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Credit_Score__c</fullName>
        <description>This is a required field.  This field indicates  the credit score(s) relied on and the name and version of the credit scoring model</description>
        <label>Credit Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Credit_Scoring_Model_Other__c</fullName>
        <description>This field specifies in text the other credit scoring model if Code 8 (Other credit scoring model) is selected in the Name and Version of Credit Scoring Model Field.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If Other Credit Scoring Model is selected as the Credit Scoring Model, this field allows you to enter a description of the model.</inlineHelpText>
        <label>Other Credit Scoring Model Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Credit_Scoring_Model__c</fullName>
        <description>This is a required field.  This field indicates the name and version of the credit scoring model used to generate the credit score, or scores, relied on in making the credit decision</description>
        <label>Credit Scoring Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 Equifax Beacon 5.0</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 Experian Fair Isaac Risk Model v2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 TransUnion FICO Risk Score Classic 04</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 TransUnion FICO Risk Score Classic 98</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>5 VantageScore 2.0</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>6 VantageScore 3.0</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>7 More than one credit scoring model</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>8 Other credit scoring model</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>9 Not applicable</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>10 No co-applicant</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Ethnicity_Collection_Method__c</fullName>
        <description>This is a required field.  This field indicates whether the ethnicity of the applicant or borrower, or of the first co-applicant or co-borrower, as applicable, was collected on the basis of visual observation or surname.</description>
        <label>Ethnicity Collection Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 Collected on the basis of visual observation or surname</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 Not collected on the basis of visual observation or surname</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 Not applicable</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 No co-applicant</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Ethnicity_Other__c</fullName>
        <description>This field specifies in text the borrower’s or co-borrower’s Other Hispanic or Latino ethnicity(ies) if 14 (Other Hispanic or Latino) is entered. Otherwise, leave this data field blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If Other Hispanic or Latino is selected as an Ethnicity, this text field allows you to specify the Other Hispanic or Latino ethnicity(ies). You may enter up to 50 characters.</inlineHelpText>
        <label>Hispanic or Latino Ethnicity(ies) Desc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Ethnicity__c</fullName>
        <description>This is a required field.  This field indicates the ethnicity of the applicant or borrower, or of the first co-applicant or co-borrower.</description>
        <inlineHelpText>Ethnicity of Entity Involvement (Up to 5 options can be selected)</inlineHelpText>
        <label>Ethnicity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 Hispanic or Latino</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>11 Mexican</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>12 Puerto Rican</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>13 Cuban</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>14 Other Hispanic or Latino</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 Not Hispanic or Latino</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 Information not provided by applicant in mail, internet, or telephone application</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 Not applicable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Income__c</fullName>
        <description>This is a required field.  This field indicates the income of the borrower or co-borrower.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter, in dollars, the gross annual income relied on in making the credit decision, or if a credit decision was not made, the gross annual income relied on in processing the application.</inlineHelpText>
        <label>Income of Applicant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Not_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. The user manually populates this field on the HMDA page. If enabled, the applicant does not have to enter other HMDA information. When disabled, other HMDA information is requested, but not required, of the applicant. This field is disabled by default.</description>
        <label>I do not wish to supply this information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Race_Collected__c</fullName>
        <description>This is a required field.  This field indicates whether the race of the applicant or borrower, or of the first co-applicant or co-borrower, as applicable, was collected on the basis of visual observation or surname.</description>
        <label>Race Collection Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 Collected on the basis of visual observation or surname</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 Not collected on the basis of visual observation or surname</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 Not applicable</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 No co-applicant</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Race_Desc_Code_1__c</fullName>
        <description>This field specifies in text description of the borrower’s or co-borrower’s enrolled or principal tribe(s) if 1 (American Indian or Alaska Native) is entered.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If American Indian or Alaska Native is selected as a Race, this text field allows you to specify the enrolled or principal tribe. You may enter up to 50 characters.</inlineHelpText>
        <label>American Indian or Alaska Native tribe</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Race_Desc_Code_27__c</fullName>
        <description>This field specifies in text description of the borrower’s or co-borrower’s Other Asian race(s) if 27 (Other Asian) is entered.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If Other Asian is selected as a Race, this text field allows you to specify the Other Asian race(s). You may enter up to 50 characters.</inlineHelpText>
        <label>Other Asian race(s)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Race_Desc_Code_44__c</fullName>
        <description>This field specifies in text description of the applicant’s or borrower’s Other Pacific Islander race(s) if 44 (Other Pacific Islander) is entered.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If Other Pacific Islander is selected as a Race, this text field allows you to specify the Other Pacific Islander race(s). You may enter up to 50 characters.</inlineHelpText>
        <label>Other Pacific Islander race(s)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Race__c</fullName>
        <description>This is a required field. This field indicates the race of the applicant or borrower, or of the first co-applicant or co-borrower.</description>
        <inlineHelpText>Race of Entity Involvement (Up to 5 options can be selected)</inlineHelpText>
        <label>Race - May select up to five</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 American Indian or Alaska Native</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 Asian</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>21 Asian Indian</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>22 Chinese</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>23 Filipino</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>24 Japanese</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>25 Korean</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>26 Vietnamese</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>27 Other Asian</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 Black or African American</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 Native Hawaiian or Other Pacific Islander</label>
                </value>
                <value>
                    <fullName>41</fullName>
                    <label>41 Native Hawaiian</label>
                </value>
                <value>
                    <fullName>42</fullName>
                    <label>42 Guamanian or Chamorro</label>
                </value>
                <value>
                    <fullName>43</fullName>
                    <label>43 Samoan</label>
                </value>
                <value>
                    <fullName>44</fullName>
                    <label>44 Other Pacific Islander</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>5 White</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>6 Information not provided by applicant in mail, internet, or telephone application</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>7 Not applicable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Sex_Collection_Method__c</fullName>
        <description>This is a required field.  This field indicates whether the sex of the applicant or borrower, or of the first co-applicant or co-borrower, as applicable, was collected on the basis of visual observation or surname.</description>
        <label>Sex Collection Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 Collected on the basis of visual observation or surname</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 Not collected on the basis of visual observation or surname</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 Not applicable</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 No co-applicant</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Sex__c</fullName>
        <description>This is a required field.  This field indicates the sex of the applicant or borrower, or of the first co-applicant or co-borrower.</description>
        <label>Sex of the Borrower or Co-Borrower</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 Male</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 Female</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 Information not provided by applicant in mail, internet, or telephone application</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 Not applicable</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>6 Applicant selected both male and female</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Entity Compliance</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ECO-{000000}</displayFormat>
        <label>Entity Compliance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entity Compliances</pluralLabel>
    <recordTypes>
        <fullName>LLC_BI__HMDA_Effective_2017</fullName>
        <active>true</active>
        <description>HMDA Compliance record, using rules effective as of 2017</description>
        <label>HMDA-Effective-2017</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__HMDA_Effective_2018</fullName>
        <active>true</active>
        <description>HMDA Compliance record, using rules effective as of 2018</description>
        <label>HMDA-Effective-2018</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>